<resources>
    <string name="app_name">MoviePickerApp</string>
    <string name="button_send">Generate Movie</string>
    <string name="welcome_to">Welcome To</string>
    <string name="movie_picker">Movie Picker</string>
    <string name="enter_btn">Enter</string>
    <string name="home_genre">Genre</string>
    <string name="home_spin">Spin The Wheel</string>
    <string name="home_account">Account</string>
    <string name="home_about">About</string>
    <string name="home_settings">Settings</string>
    <string name="option_home">Home</string>
    <string name="option_login">Login</string>
    <string name="option_rate">Rate the App!</string>
    <string name="login_UserNameHint">Username</string>
    <string name="login_PasswordHint">Password</string>
    <string name="login">Login</string>
    <string name="register">Register Here!</string>
    <string name="haveAccount">Already Have an Account? Login Here!</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="password">Password</string>
    <string name="Random_Generator">Randomize!</string>
    <string name="Search">Search Movies</string>
    <string name="Randomize_Message">Time to Randomize!!!</string>
    <string name="About_Intro"> The MoviePicker app is a 4th Year College project created by Ross Kennedy a student at the
        Institute of Technology Blanchardstown. The aim of this app is to allow users to quickly and easily find a movie that they would like to watch
        through the click of a button!. The app also has built in filtering options to make it easier to find movies from a specific genre, year etc..
        If you would like to contact us all the relevant information you need is listed below.
        We hope you enjoy the app and find the movie that your looking for!
        Happy Movie Hunting!!
    </string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_password">Enter Password</string>
    <string name="error_message_first_name">Enter First Name</string>
    <string name="error_message_last_name">Enter Last Name</string>
    <string name="error_password_match">Passwords Do Not Match</string>
    <string name="success_message">Registration Successful</string>
    <string name="email_used">Email Already Exists</string>
    <string name="RateReviewButton">Rate And Review?</string>
    <string name="MobileBracket">(Mobile)</string>
    <string name="TempMovieTitle">Movie Title</string>
    <string name="TempMovieDesc">Movie Description</string>
    <string name="app_logo">App Logo</string>
    <string name="title_activity_logged_in_home">LoggedInHomeActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_genre_drop_down">GenreDropDown</string>
    <string name="search">Search</string>
    <string name="title_activity_search">To Search</string>
    <string name="enter_movie_name_to_find">Enter Movie Name</string>
    <string name="debug_screen">Debug_Screen</string>
    <string name="to_movie_filter">TO Movie Filter</string>
    <string name="test_api_call">Test API Call</string>
    <string name="movie_filter">Movie Filter</string>
    <string name="genre">Genre :</string>
    <string name="sub_genre">Sub-Genre :</string>
    <string name="language">Language :</string>
    <string name="rating">Rating :</string>
    <string name="title_activity_display_movie">DisplayMovie</string>
    <string name="error">Error</string>
    <string name="next">Next</string>
    <string name="movie_poster_image">Movie Poster Image</string>
    <string name="random_movie">Random Movie</string>
    <string name="more">More</string>
    <string name="previous">Previous</string>
    <string name="movie_name">Movie Name</string>
    <string name="share">Share</string>
</resources>
