<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.ross.moviepickerapp.MovieFilter"
    tools:showIn="@layout/activity_movie_filter">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/Button_FilterSearch"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onFilterSearchBtnClicked"
            android:text="@string/search"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/TV_Genre"
                android:layout_width="80dp"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/genre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TV_MovieTitle" />

            <TextView
                android:id="@+id/TV_SubGenre"
                android:layout_width="80dp"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/sub_genre"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TV_Genre" />

            <Spinner
                android:id="@+id/Spinner_Genre"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/TV_Genre"
                app:layout_constraintTop_toBottomOf="@+id/TV_MovieTitle" />

            <Spinner
                android:id="@+id/Spinner_Language"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/TV_Language"
                app:layout_constraintTop_toBottomOf="@+id/Spinner_SubGenre" />

            <TextView
                android:id="@+id/TV_Rating"
                android:layout_width="80dp"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/rating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TV_Language" />

            <Spinner
                android:id="@+id/Spinner_Rating"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/TV_Rating"
                app:layout_constraintTop_toBottomOf="@+id/Spinner_Language" />

            <Spinner
                android:id="@+id/Spinner_SubGenre"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/TV_SubGenre"
                app:layout_constraintTop_toBottomOf="@+id/Spinner_Genre" />

            <TextView
                android:id="@+id/TV_Language"
                android:layout_width="80dp"
                android:layout_height="24dp"
                android:layout_marginStart="24dp"
                android:layout_marginTop="32dp"
                android:text="@string/language"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/TV_SubGenre" />

            <TextView
                android:id="@+id/TV_MovieTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/movie_filter"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>
